package NDnnProto;


message TConnectionRecipe {
    optional double Amplitude = 1;
    optional bool Exists = 2;
}

